[package]
name = "atcoder-by-difficulty"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ac-library-rs = "=0.1.1"
once_cell = "=1.18.0"
static_assertions = "=1.1.0"
varisat = "=0.2.2"
memoise = "=0.3.2"
argio = "=0.2.0"
bitvec = "=1.0.1"
counter = "=0.5.7"
hashbag = "=0.1.11"
pathfinding = "=4.3.0"
recur-fn = "=2.2.0"
indexing = { version = "=0.4.1", features = ["experimental_pointer_ranges"] }
amplify = { version = "=3.14.2", features = ["c_raw", "rand", "stringly_conversions"] }
amplify_derive = "=2.11.3"
amplify_num = { version = "=0.4.1", features = ["std"] }
easy-ext = "=1.0.1"
multimap = "=0.9.0"
btreemultimap = "=0.1.1"
bstr = "=1.6.0"
az = "=1.2.1"
glidesort = "=0.1.2"
tap = "=1.0.1"
omniswap = "=0.1.0"
multiversion = "=0.7.2"
num = "=0.4.1"
num-bigint = "=0.4.3"
num-complex = "=0.4.3"
num-integer = "=0.1.45"
num-iter = "=0.1.43"
num-rational = "=0.4.1"
num-traits = "=0.2.15"
num-derive = "=0.4.0"
ndarray = "=0.15.6"
nalgebra = "=0.32.3"
alga = "=0.9.3"
libm = "=0.2.7"
rand = { version = "=0.8.5", features = ["small_rng", "min_const_gen"] }
getrandom = "=0.2.10"
rand_chacha = "=0.3.1"
rand_core = "=0.6.4"
rand_hc = "=0.3.2"
rand_pcg = "=0.3.1"
rand_distr = "=0.4.3"
petgraph = "=0.6.3"
indexmap = "=2.0.0"
regex = "=1.9.1"
lazy_static = "=1.4.0"
ordered-float = "=3.7.0"
ascii = "=1.1.0"
permutohedron = "=0.2.4"
superslice = "=1.0.0"
itertools = "=0.11.0"
itertools-num = "=0.1.3"
maplit = "=1.0.2"
either = "=1.8.1"
im-rc = "=15.1.0"
fixedbitset = "=0.4.2"
bitset-fixed = "=0.1.0"
proconio = { version = "=0.4.5", features = ["derive"] }
text_io = "=0.1.12"
rustc-hash = "=1.1.0"
smallvec = { version = "=1.11.0", features = ["const_generics", "const_new", "write", "union", "serde", "arbitrary"] }

[[bin]]
name = "abc001-a"
path = "src/bin/abc-a/abc001-a.rs"

[[bin]]
name = "abc002-a"
path = "src/bin/abc-a/abc002-a.rs"

[[bin]]
name = "abc003-a"
path = "src/bin/abc-a/abc003-a.rs"

[[bin]]
name = "abc004-a"
path = "src/bin/abc-a/abc004-a.rs"

[[bin]]
name = "abc005-a"
path = "src/bin/abc-a/abc005-a.rs"

[[bin]]
name = "abc006-a"
path = "src/bin/abc-a/abc006-a.rs"

[[bin]]
name = "abc007-a"
path = "src/bin/abc-a/abc007-a.rs"

[[bin]]
name = "abc008-a"
path = "src/bin/abc-a/abc008-a.rs"

[[bin]]
name = "abc009-a"
path = "src/bin/abc-a/abc009-a.rs"

[[bin]]
name = "abc010-a"
path = "src/bin/abc-a/abc010-a.rs"

[[bin]]
name = "abc011-a"
path = "src/bin/abc-a/abc011-a.rs"

[[bin]]
name = "abc012-a"
path = "src/bin/abc-a/abc012-a.rs"

[[bin]]
name = "abc013-a"
path = "src/bin/abc-a/abc013-a.rs"

[[bin]]
name = "abc014-a"
path = "src/bin/abc-a/abc014-a.rs"

[[bin]]
name = "abc015-a"
path = "src/bin/abc-a/abc015-a.rs"

[[bin]]
name = "abc016-a"
path = "src/bin/abc-a/abc016-a.rs"

[[bin]]
name = "abc017-a"
path = "src/bin/abc-a/abc017-a.rs"

[[bin]]
name = "abc018-a"
path = "src/bin/abc-a/abc018-a.rs"

[[bin]]
name = "abc019-a"
path = "src/bin/abc-a/abc019-a.rs"

[[bin]]
name = "abc020-a"
path = "src/bin/abc-a/abc020-a.rs"

[[bin]]
name = "abc021-a"
path = "src/bin/abc-a/abc021-a.rs"

[[bin]]
name = "abc022-a"
path = "src/bin/abc-a/abc022-a.rs"

[[bin]]
name = "abc023-a"
path = "src/bin/abc-a/abc023-a.rs"

[[bin]]
name = "abc024-a"
path = "src/bin/abc-a/abc024-a.rs"

[[bin]]
name = "abc025-a"
path = "src/bin/abc-a/abc025-a.rs"

[[bin]]
name = "abc026-a"
path = "src/bin/abc-a/abc026-a.rs"

[[bin]]
name = "abc027-a"
path = "src/bin/abc-a/abc027-a.rs"

[[bin]]
name = "abc028-a"
path = "src/bin/abc-a/abc028-a.rs"

[[bin]]
name = "abc029-a"
path = "src/bin/abc-a/abc029-a.rs"

[[bin]]
name = "abc030-a"
path = "src/bin/abc-a/abc030-a.rs"

[[bin]]
name = "abc031-a"
path = "src/bin/abc-a/abc031-a.rs"

[[bin]]
name = "abc032-a"
path = "src/bin/abc-a/abc032-a.rs"

[[bin]]
name = "abc033-a"
path = "src/bin/abc-a/abc033-a.rs"

[[bin]]
name = "abc034-a"
path = "src/bin/abc-a/abc034-a.rs"

[[bin]]
name = "abc035-a"
path = "src/bin/abc-a/abc035-a.rs"

[[bin]]
name = "abc036-a"
path = "src/bin/abc-a/abc036-a.rs"

[[bin]]
name = "abc037-a"
path = "src/bin/abc-a/abc037-a.rs"

[[bin]]
name = "abc038-a"
path = "src/bin/abc-a/abc038-a.rs"

[[bin]]
name = "abc039-a"
path = "src/bin/abc-a/abc039-a.rs"

[[bin]]
name = "abc040-a"
path = "src/bin/abc-a/abc040-a.rs"

[[bin]]
name = "abc041-a"
path = "src/bin/abc-a/abc041-a.rs"

[[bin]]
name = "abc042-a"
path = "src/bin/abc-a/abc042-a.rs"

[[bin]]
name = "abc043-a"
path = "src/bin/abc-a/abc043-a.rs"

[[bin]]
name = "abc044-a"
path = "src/bin/abc-a/abc044-a.rs"

[[bin]]
name = "abc045-a"
path = "src/bin/abc-a/abc045-a.rs"

[[bin]]
name = "abc046-a"
path = "src/bin/abc-a/abc046-a.rs"

[[bin]]
name = "abc047-a"
path = "src/bin/abc-a/abc047-a.rs"

[[bin]]
name = "abc048-a"
path = "src/bin/abc-a/abc048-a.rs"

[[bin]]
name = "abc049-a"
path = "src/bin/abc-a/abc049-a.rs"

[[bin]]
name = "abc050-a"
path = "src/bin/abc-a/abc050-a.rs"

[[bin]]
name = "abc051-a"
path = "src/bin/abc-a/abc051-a.rs"

[[bin]]
name = "abc052-a"
path = "src/bin/abc-a/abc052-a.rs"

[[bin]]
name = "abc053-a"
path = "src/bin/abc-a/abc053-a.rs"

[[bin]]
name = "abc054-a"
path = "src/bin/abc-a/abc054-a.rs"

[[bin]]
name = "abc055-a"
path = "src/bin/abc-a/abc055-a.rs"

[[bin]]
name = "abc056-a"
path = "src/bin/abc-a/abc056-a.rs"

[[bin]]
name = "abc057-a"
path = "src/bin/abc-a/abc057-a.rs"

[[bin]]
name = "abc058-a"
path = "src/bin/abc-a/abc058-a.rs"

[[bin]]
name = "abc059-a"
path = "src/bin/abc-a/abc059-a.rs"

[[bin]]
name = "abc060-a"
path = "src/bin/abc-a/abc060-a.rs"

[[bin]]
name = "abc061-a"
path = "src/bin/abc-a/abc061-a.rs"

[[bin]]
name = "abc062-a"
path = "src/bin/abc-a/abc062-a.rs"

[[bin]]
name = "abc063-a"
path = "src/bin/abc-a/abc063-a.rs"

[[bin]]
name = "abc064-a"
path = "src/bin/abc-a/abc064-a.rs"

[[bin]]
name = "abc065-a"
path = "src/bin/abc-a/abc065-a.rs"

[[bin]]
name = "abc066-a"
path = "src/bin/abc-a/abc066-a.rs"

[[bin]]
name = "abc067-a"
path = "src/bin/abc-a/abc067-a.rs"

[[bin]]
name = "abc068-a"
path = "src/bin/abc-a/abc068-a.rs"

[[bin]]
name = "abc069-a"
path = "src/bin/abc-a/abc069-a.rs"

[[bin]]
name = "abc070-a"
path = "src/bin/abc-a/abc070-a.rs"

[[bin]]
name = "abc071-a"
path = "src/bin/abc-a/abc071-a.rs"

[[bin]]
name = "abc072-a"
path = "src/bin/abc-a/abc072-a.rs"

[[bin]]
name = "abc073-a"
path = "src/bin/abc-a/abc073-a.rs"

[[bin]]
name = "abc074-a"
path = "src/bin/abc-a/abc074-a.rs"

[[bin]]
name = "abc075-a"
path = "src/bin/abc-a/abc075-a.rs"

[[bin]]
name = "abc076-a"
path = "src/bin/abc-a/abc076-a.rs"

[[bin]]
name = "abc077-a"
path = "src/bin/abc-a/abc077-a.rs"

[[bin]]
name = "abc078-a"
path = "src/bin/abc-a/abc078-a.rs"

[[bin]]
name = "abc079-a"
path = "src/bin/abc-a/abc079-a.rs"

[[bin]]
name = "abc080-a"
path = "src/bin/abc-a/abc080-a.rs"

[[bin]]
name = "abc081-a"
path = "src/bin/abc-a/abc081-a.rs"

[[bin]]
name = "abc082-a"
path = "src/bin/abc-a/abc082-a.rs"

[[bin]]
name = "abc083-a"
path = "src/bin/abc-a/abc083-a.rs"

[[bin]]
name = "abc084-a"
path = "src/bin/abc-a/abc084-a.rs"

[[bin]]
name = "abc085-a"
path = "src/bin/abc-a/abc085-a.rs"

[[bin]]
name = "abc086-a"
path = "src/bin/abc-a/abc086-a.rs"

[[bin]]
name = "abc087-a"
path = "src/bin/abc-a/abc087-a.rs"

[[bin]]
name = "abc088-a"
path = "src/bin/abc-a/abc088-a.rs"

[[bin]]
name = "abc089-a"
path = "src/bin/abc-a/abc089-a.rs"

[[bin]]
name = "abc090-a"
path = "src/bin/abc-a/abc090-a.rs"

[[bin]]
name = "abc091-a"
path = "src/bin/abc-a/abc091-a.rs"

[[bin]]
name = "abc092-a"
path = "src/bin/abc-a/abc092-a.rs"

[[bin]]
name = "abc093-a"
path = "src/bin/abc-a/abc093-a.rs"

[[bin]]
name = "abc094-a"
path = "src/bin/abc-a/abc094-a.rs"

[[bin]]
name = "abc095-a"
path = "src/bin/abc-a/abc095-a.rs"

[[bin]]
name = "abc096-a"
path = "src/bin/abc-a/abc096-a.rs"

[[bin]]
name = "abc097-a"
path = "src/bin/abc-a/abc097-a.rs"

[[bin]]
name = "abc098-a"
path = "src/bin/abc-a/abc098-a.rs"

[[bin]]
name = "abc099-a"
path = "src/bin/abc-a/abc099-a.rs"

[[bin]]
name = "abc100-a"
path = "src/bin/abc-a/abc100-a.rs"

[[bin]]
name = "abc101-a"
path = "src/bin/abc-a/abc101-a.rs"

[[bin]]
name = "abc102-a"
path = "src/bin/abc-a/abc102-a.rs"

[[bin]]
name = "abc103-a"
path = "src/bin/abc-a/abc103-a.rs"

[[bin]]
name = "abc104-a"
path = "src/bin/abc-a/abc104-a.rs"

[[bin]]
name = "abc105-a"
path = "src/bin/abc-a/abc105-a.rs"

[[bin]]
name = "abc106-a"
path = "src/bin/abc-a/abc106-a.rs"

[[bin]]
name = "abc107-a"
path = "src/bin/abc-a/abc107-a.rs"

[[bin]]
name = "abc108-a"
path = "src/bin/abc-a/abc108-a.rs"

[[bin]]
name = "abc109-a"
path = "src/bin/abc-a/abc109-a.rs"

[[bin]]
name = "abc110-a"
path = "src/bin/abc-a/abc110-a.rs"

[[bin]]
name = "abc111-a"
path = "src/bin/abc-a/abc111-a.rs"

[[bin]]
name = "abc112-a"
path = "src/bin/abc-a/abc112-a.rs"

[[bin]]
name = "abc113-a"
path = "src/bin/abc-a/abc113-a.rs"

[[bin]]
name = "abc114-a"
path = "src/bin/abc-a/abc114-a.rs"

[[bin]]
name = "abc115-a"
path = "src/bin/abc-a/abc115-a.rs"

[[bin]]
name = "abc116-a"
path = "src/bin/abc-a/abc116-a.rs"

[[bin]]
name = "abc117-a"
path = "src/bin/abc-a/abc117-a.rs"

[[bin]]
name = "abc118-a"
path = "src/bin/abc-a/abc118-a.rs"

[[bin]]
name = "abc119-a"
path = "src/bin/abc-a/abc119-a.rs"

[[bin]]
name = "abc120-a"
path = "src/bin/abc-a/abc120-a.rs"

[[bin]]
name = "abc121-a"
path = "src/bin/abc-a/abc121-a.rs"

[[bin]]
name = "abc122-a"
path = "src/bin/abc-a/abc122-a.rs"

[[bin]]
name = "abc123-a"
path = "src/bin/abc-a/abc123-a.rs"

[[bin]]
name = "abc124-a"
path = "src/bin/abc-a/abc124-a.rs"

[[bin]]
name = "abc125-a"
path = "src/bin/abc-a/abc125-a.rs"

[[bin]]
name = "abc126-a"
path = "src/bin/abc-a/abc126-a.rs"

[[bin]]
name = "abc127-a"
path = "src/bin/abc-a/abc127-a.rs"

[[bin]]
name = "abc128-a"
path = "src/bin/abc-a/abc128-a.rs"

[[bin]]
name = "abc129-a"
path = "src/bin/abc-a/abc129-a.rs"

[[bin]]
name = "abc130-a"
path = "src/bin/abc-a/abc130-a.rs"

[[bin]]
name = "abc131-a"
path = "src/bin/abc-a/abc131-a.rs"

[[bin]]
name = "abc132-a"
path = "src/bin/abc-a/abc132-a.rs"

[[bin]]
name = "abc133-a"
path = "src/bin/abc-a/abc133-a.rs"

[[bin]]
name = "abc134-a"
path = "src/bin/abc-a/abc134-a.rs"

[[bin]]
name = "abc135-a"
path = "src/bin/abc-a/abc135-a.rs"

[[bin]]
name = "abc136-a"
path = "src/bin/abc-a/abc136-a.rs"

[[bin]]
name = "abc137-a"
path = "src/bin/abc-a/abc137-a.rs"

[[bin]]
name = "abc138-a"
path = "src/bin/abc-a/abc138-a.rs"

[[bin]]
name = "abc139-a"
path = "src/bin/abc-a/abc139-a.rs"

[[bin]]
name = "abc140-a"
path = "src/bin/abc-a/abc140-a.rs"

[[bin]]
name = "abc141-a"
path = "src/bin/abc-a/abc141-a.rs"

[[bin]]
name = "abc142-a"
path = "src/bin/abc-a/abc142-a.rs"

[[bin]]
name = "abc143-a"
path = "src/bin/abc-a/abc143-a.rs"

[[bin]]
name = "abc144-a"
path = "src/bin/abc-a/abc144-a.rs"

[[bin]]
name = "abc145-a"
path = "src/bin/abc-a/abc145-a.rs"

[[bin]]
name = "abc146-a"
path = "src/bin/abc-a/abc146-a.rs"

[[bin]]
name = "abc147-a"
path = "src/bin/abc-a/abc147-a.rs"

[[bin]]
name = "abc148-a"
path = "src/bin/abc-a/abc148-a.rs"

[[bin]]
name = "abc149-a"
path = "src/bin/abc-a/abc149-a.rs"

[[bin]]
name = "abc150-a"
path = "src/bin/abc-a/abc150-a.rs"

[[bin]]
name = "abc150-d"
path = "src/bin/abc-d/abc150-d.rs"

[[bin]]
name = "abc151-d"
path = "src/bin/abc-d/abc151-d.rs"

[[bin]]
name = "abc152-d"
path = "src/bin/abc-d/abc152-d.rs"

[[bin]]
name = "abc153-d"
path = "src/bin/abc-d/abc153-d.rs"

[[bin]]
name = "abc154-d"
path = "src/bin/abc-d/abc154-d.rs"

[[bin]]
name = "abc155-d"
path = "src/bin/abc-d/abc155-d.rs"

[[bin]]
name = "abc156-d"
path = "src/bin/abc-d/abc156-d.rs"

[[bin]]
name = "abc157-d"
path = "src/bin/abc-d/abc157-d.rs"

[[bin]]
name = "abc158-d"
path = "src/bin/abc-d/abc158-d.rs"

[[bin]]
name = "abc159-d"
path = "src/bin/abc-d/abc159-d.rs"

[[bin]]
name = "abc160-d"
path = "src/bin/abc-d/abc160-d.rs"

[[bin]]
name = "abc161-d"
path = "src/bin/abc-d/abc161-d.rs"

[[bin]]
name = "abc162-d"
path = "src/bin/abc-d/abc162-d.rs"

[[bin]]
name = "abc163-d"
path = "src/bin/abc-d/abc163-d.rs"

[[bin]]
name = "abc164-d"
path = "src/bin/abc-d/abc164-d.rs"

[[bin]]
name = "abc165-d"
path = "src/bin/abc-d/abc165-d.rs"

[[bin]]
name = "abc166-d"
path = "src/bin/abc-d/abc166-d.rs"

[[bin]]
name = "abc167-d"
path = "src/bin/abc-d/abc167-d.rs"

[[bin]]
name = "abc168-d"
path = "src/bin/abc-d/abc168-d.rs"

[[bin]]
name = "abc169-d"
path = "src/bin/abc-d/abc169-d.rs"

[[bin]]
name = "abc170-d"
path = "src/bin/abc-d/abc170-d.rs"

[[bin]]
name = "abc171-d"
path = "src/bin/abc-d/abc171-d.rs"

[[bin]]
name = "abc172-d"
path = "src/bin/abc-d/abc172-d.rs"

[[bin]]
name = "abc173-d"
path = "src/bin/abc-d/abc173-d.rs"

[[bin]]
name = "abc174-d"
path = "src/bin/abc-d/abc174-d.rs"

[[bin]]
name = "abc175-d"
path = "src/bin/abc-d/abc175-d.rs"

[[bin]]
name = "abc176-d"
path = "src/bin/abc-d/abc176-d.rs"

[[bin]]
name = "abc177-d"
path = "src/bin/abc-d/abc177-d.rs"

[[bin]]
name = "abc178-d"
path = "src/bin/abc-d/abc178-d.rs"

[[bin]]
name = "abc179-d"
path = "src/bin/abc-d/abc179-d.rs"

[[bin]]
name = "abc180-d"
path = "src/bin/abc-d/abc180-d.rs"

[[bin]]
name = "abc181-d"
path = "src/bin/abc-d/abc181-d.rs"

[[bin]]
name = "abc182-d"
path = "src/bin/abc-d/abc182-d.rs"

[[bin]]
name = "abc183-d"
path = "src/bin/abc-d/abc183-d.rs"

[[bin]]
name = "abc184-d"
path = "src/bin/abc-d/abc184-d.rs"

[[bin]]
name = "abc185-d"
path = "src/bin/abc-d/abc185-d.rs"

[[bin]]
name = "abc151-b"
path = "src/bin/abc-b/abc151-b.rs"

[[bin]]
name = "abc186-d"
path = "src/bin/abc-d/abc186-d.rs"

[[bin]]
name = "abc187-d"
path = "src/bin/abc-d/abc187-d.rs"

[[bin]]
name = "abc188-d"
path = "src/bin/abc-d/abc188-d.rs"

[[bin]]
name = "abc189-d"
path = "src/bin/abc-d/abc189-d.rs"

[[bin]]
name = "abc190-d"
path = "src/bin/abc-d/abc190-d.rs"

[[bin]]
name = "abc151-e"
path = "src/bin/abc-e/abc151-e.rs"

[[bin]]
name = "abc152-e"
path = "src/bin/abc-e/abc152-e.rs"

[[bin]]
name = "abc191-d"
path = "src/bin/abc-d/abc191-d.rs"

[[bin]]
name = "abc192-d"
path = "src/bin/abc-d/abc192-d.rs"

[[bin]]
name = "abc193-d"
path = "src/bin/abc-d/abc193-d.rs"

[[bin]]
name = "abc194-d"
path = "src/bin/abc-d/abc194-d.rs"

[[bin]]
name = "abc195-d"
path = "src/bin/abc-d/abc195-d.rs"

[[bin]]
name = "abc196-d"
path = "src/bin/abc-d/abc196-d.rs"

[[bin]]
name = "abc197-d"
path = "src/bin/abc-d/abc197-d.rs"

[[bin]]
name = "abc198-d"
path = "src/bin/abc-d/abc198-d.rs"

[[bin]]
name = "abc199-d"
path = "src/bin/abc-d/abc199-d.rs"

[[bin]]
name = "abc200-d"
path = "src/bin/abc-d/abc200-d.rs"

[[bin]]
name = "abc153-e"
path = "src/bin/abc-e/abc153-e.rs"

[[bin]]
name = "abc154-e"
path = "src/bin/abc-e/abc154-e.rs"

[[bin]]
name = "abc201-d"
path = "src/bin/abc-d/abc201-d.rs"

[[bin]]
name = "abc202-d"
path = "src/bin/abc-d/abc202-d.rs"

[[bin]]
name = "abc203-d"
path = "src/bin/abc-d/abc203-d.rs"

[[bin]]
name = "abc204-d"
path = "src/bin/abc-d/abc204-d.rs"

[[bin]]
name = "abc205-d"
path = "src/bin/abc-d/abc205-d.rs"

[[bin]]
name = "abc206-d"
path = "src/bin/abc-d/abc206-d.rs"

[[bin]]
name = "abc207-d"
path = "src/bin/abc-d/abc207-d.rs"

[[bin]]
name = "abc208-d"
path = "src/bin/abc-d/abc208-d.rs"

[[bin]]
name = "abc209-d"
path = "src/bin/abc-d/abc209-d.rs"

[[bin]]
name = "abc210-d"
path = "src/bin/abc-d/abc210-d.rs"

[[bin]]
name = "abc211-d"
path = "src/bin/abc-d/abc211-d.rs"

[[bin]]
name = "abc212-d"
path = "src/bin/abc-d/abc212-d.rs"

[[bin]]
name = "abc213-d"
path = "src/bin/abc-d/abc213-d.rs"

[[bin]]
name = "abc214-d"
path = "src/bin/abc-d/abc214-d.rs"

[[bin]]
name = "abc215-d"
path = "src/bin/abc-d/abc215-d.rs"

[[bin]]
name = "abc216-d"
path = "src/bin/abc-d/abc216-d.rs"

[[bin]]
name = "abc217-d"
path = "src/bin/abc-d/abc217-d.rs"

[[bin]]
name = "abc218-d"
path = "src/bin/abc-d/abc218-d.rs"

[[bin]]
name = "abc219-d"
path = "src/bin/abc-d/abc219-d.rs"

[[bin]]
name = "abc220-d"
path = "src/bin/abc-d/abc220-d.rs"

[[bin]]
name = "abc221-d"
path = "src/bin/abc-d/abc221-d.rs"

[[bin]]
name = "abc222-d"
path = "src/bin/abc-d/abc222-d.rs"

[[bin]]
name = "abc223-d"
path = "src/bin/abc-d/abc223-d.rs"

[[bin]]
name = "abc224-d"
path = "src/bin/abc-d/abc224-d.rs"

[[bin]]
name = "abc225-d"
path = "src/bin/abc-d/abc225-d.rs"

[[bin]]
name = "abc155-e"
path = "src/bin/abc-e/abc155-e.rs"

[[bin]]
name = "abc226-d"
path = "src/bin/abc-d/abc226-d.rs"

[[bin]]
name = "abc227-d"
path = "src/bin/abc-d/abc227-d.rs"

[[bin]]
name = "abc228-d"
path = "src/bin/abc-d/abc228-d.rs"

[[bin]]
name = "abc229-d"
path = "src/bin/abc-d/abc229-d.rs"

[[bin]]
name = "abc230-d"
path = "src/bin/abc-d/abc230-d.rs"

[[bin]]
name = "arc132-a"
path = "src/bin/arc-a/arc132-a.rs"

[[bin]]
name = "abc179-e"
path = "src/bin/abc-e/abc179-e.rs"

[[bin]]
name = "abc156-e"
path = "src/bin/abc-e/abc156-e.rs"

[[bin]]
name = "abc225-e"
path = "src/bin/abc-e/abc225-e.rs"

[[bin]]
name = "arc133-a"
path = "src/bin/arc-a/arc133-a.rs"

[[bin]]
name = "arc133-b"
path = "src/bin/arc-b/arc133-b.rs"

[[bin]]
name = "abc223-c"
path = "src/bin/abc-c/abc223-c.rs"

[[bin]]
name = "abc223-a"
path = "src/bin/abc-a/abc223-a.rs"

[[bin]]
name = "abc223-b"
path = "src/bin/abc-b/abc223-b.rs"

[[bin]]
name = "abc201-e"
path = "src/bin/abc-e/abc201-e.rs"

[[bin]]
name = "abc202-e"
path = "src/bin/abc-e/abc202-e.rs"

[[bin]]
name = "abc203-e"
path = "src/bin/abc-e/abc203-e.rs"

[[bin]]
name = "abc001-b"
path = "src/bin/abc-b/abc001-b.rs"

[[bin]]
name = "abc204-e"
path = "src/bin/abc-e/abc204-e.rs"

[[bin]]
name = "abc206-e"
path = "src/bin/abc-e/abc206-e.rs"

[[bin]]
name = "abc207-e"
path = "src/bin/abc-e/abc207-e.rs"

[[bin]]
name = "abc212-b"
path = "src/bin/abc-b/abc212-b.rs"

[[bin]]
name = "abc210-b"
path = "src/bin/abc-b/abc210-b.rs"

[[bin]]
name = "abc216-c"
path = "src/bin/abc-c/abc216-c.rs"

[[bin]]
name = "abc208-b"
path = "src/bin/abc-b/abc208-b.rs"

[[bin]]
name = "abc312-e"
path = "src/bin/abc-e/abc312-e.rs"

[[bin]]
name = "abc312-f"
path = "src/bin/abc-f/abc312-f.rs"

[[bin]]
name = "arc123-b"
path = "src/bin/arc-b/arc123-b.rs"

[[bin]]
name = "abc139-f"
path = "src/bin/abc-f/abc139-f.rs"

[[bin]]
name = "arc159-b"
path = "src/bin/arc-b/arc159-b.rs"

[[bin]]
name = "arc135-b"
path = "src/bin/arc-b/arc135-b.rs"

[[bin]]
name = "abc313-d"
path = "src/bin/abc-d/abc313-d.rs"

[[bin]]
name = "abc147-c"
path = "src/bin/abc-c/abc147-c.rs"

[[bin]]
name = "abc235-d"
path = "src/bin/abc-d/abc235-d.rs"

[[bin]]
name = "abc002-b"
path = "src/bin/abc-b/abc002-b.rs"

[[bin]]
name = "abc002-c"
path = "src/bin/abc-c/abc002-c.rs"

[[bin]]
name = "abc175-e"
path = "src/bin/abc-e/abc175-e.rs"

[[bin]]
name = "agc063-a"
path = "src/bin/agc-a/agc063-a.rs"

[[bin]]
name = "abc214-a"
path = "src/bin/abc-a/abc214-a.rs"

[[bin]]
name = "abc256-e"
path = "src/bin/abc-e/abc256-e.rs"

[[bin]]
name = "abc313-e"
path = "src/bin/abc-e/abc313-e.rs"

[[bin]]
name = "abc075-c"
path = "src/bin/abc-c/abc075-c.rs"

[[bin]]
name = "abc214-c"
path = "src/bin/abc-c/abc214-c.rs"

[[bin]]
name = "abc243-e"
path = "src/bin/abc-e/abc243-e.rs"

[[bin]]
name = "abc309-f"
path = "src/bin/abc-f/abc309-f.rs"

[[bin]]
name = "abc285-e"
path = "src/bin/abc-e/abc285-e.rs"

[[bin]]
name = "abc290-e"
path = "src/bin/abc-e/abc290-e.rs"

[[bin]]
name = "abc288-d"
path = "src/bin/abc-d/abc288-d.rs"

[[bin]]
name = "abc263-e"
path = "src/bin/abc-e/abc263-e.rs"

[[bin]]
name = "abc196-e"
path = "src/bin/abc-e/abc196-e.rs"

[[bin]]
name = "abc208-c"
path = "src/bin/abc-c/abc208-c.rs"

[[bin]]
name = "abc210-c"
path = "src/bin/abc-c/abc210-c.rs"

[[bin]]
name = "abc155-c"
path = "src/bin/abc-c/abc155-c.rs"

[[bin]]
name = "abc154-c"
path = "src/bin/abc-c/abc154-c.rs"

[[bin]]
name = "abc126-d"
path = "src/bin/abc-d/abc126-d.rs"

[[bin]]
name = "abc153-c"
path = "src/bin/abc-c/abc153-c.rs"

[[bin]]
name = "abc095-b"
path = "src/bin/abc-b/abc095-b.rs"

[[bin]]
name = "abc099-b"
path = "src/bin/abc-b/abc099-b.rs"

[[bin]]
name = "abc240-e"
path = "src/bin/abc-e/abc240-e.rs"

[[bin]]
name = "abc240-c"
path = "src/bin/abc-c/abc240-c.rs"

[[bin]]
name = "abc157-c"
path = "src/bin/abc-c/abc157-c.rs"

[[bin]]
name = "abc247-e"
path = "src/bin/abc-e/abc247-e.rs"

[[bin]]
name = "abc135-d"
path = "src/bin/abc-d/abc135-d.rs"

[[bin]]
name = "abc247-d"
path = "src/bin/abc-d/abc247-d.rs"

[[bin]]
name = "abc059-d"
path = "src/bin/abc-d/abc059-d.rs"

[[bin]]
name = "abc306-f"
path = "src/bin/abc-f/abc306-f.rs"

[[bin]]
name = "abc260-e"
path = "src/bin/abc-e/abc260-e.rs"

[[bin]]
name = "arc136-a"
path = "src/bin/arc-a/arc136-a.rs"

[[bin]]
name = "arc136-b"
path = "src/bin/arc-b/arc136-b.rs"

[[bin]]
name = "arc118-c"
path = "src/bin/arc-c/arc118-c.rs"

[[bin]]
name = "arc113-d"
path = "src/bin/arc-d/arc113-d.rs"

[[bin]]
name = "arc034-b"
path = "src/bin/arc-b/arc034-b.rs"

[[bin]]
name = "arc042-b"
path = "src/bin/arc-b/arc042-b.rs"

[[bin]]
name = "abc066-d"
path = "src/bin/abc-d/abc066-d.rs"

[[bin]]
name = "abc007-d"
path = "src/bin/abc-d/abc007-d.rs"

[[bin]]
name = "agc058-a"
path = "src/bin/agc-a/agc058-a.rs"

[[bin]]
name = "arc004-b"
path = "src/bin/arc-b/arc004-b.rs"

[[bin]]
name = "abc154-f"
path = "src/bin/abc-f/abc154-f.rs"

[[bin]]
name = "abc266-g"
path = "src/bin/abc-g/abc266-g.rs"

[[bin]]
name = "arc155-b"
path = "src/bin/arc-b/arc155-b.rs"

[[bin]]
name = "arc127-a"
path = "src/bin/arc-a/arc127-a.rs"

[[bin]]
name = "arc135-c"
path = "src/bin/arc-c/arc135-c.rs"

[[bin]]
name = "arc161-d"
path = "src/bin/arc-d/arc161-d.rs"

[[bin]]
name = "arc139-b"
path = "src/bin/arc-b/arc139-b.rs"

[[bin]]
name = "abc067-d"
path = "src/bin/abc-d/abc067-d.rs"

[[bin]]
name = "abc213-e"
path = "src/bin/abc-e/abc213-e.rs"

[[bin]]
name = "abc239-d"
path = "src/bin/abc-d/abc239-d.rs"

[[bin]]
name = "abc097-d"
path = "src/bin/abc-d/abc097-d.rs"

[[bin]]
name = "abc250-e"
path = "src/bin/abc-e/abc250-e.rs"

[[bin]]
name = "agc055-a"
path = "src/bin/agc-a/agc055-a.rs"

[[bin]]
name = "agc023-b"
path = "src/bin/agc-b/agc023-b.rs"

[[bin]]
name = "abc247-c"
path = "src/bin/abc-c/abc247-c.rs"

[[bin]]
name = "arc007-c"
path = "src/bin/arc-c/arc007-c.rs"

[[bin]]
name = "abc102-c"
path = "src/bin/abc-c/abc102-c.rs"

[[bin]]
name = "agc005-a"
path = "src/bin/agc-a/agc005-a.rs"

[[bin]]
name = "agc005-b"
path = "src/bin/agc-b/agc005-b.rs"

[[bin]]
name = "agc005-c"
path = "src/bin/agc-c/agc005-c.rs"

[[bin]]
name = "agc005-d"
path = "src/bin/agc-d/agc005-d.rs"

[[bin]]
name = "abc250-d"
path = "src/bin/abc-d/abc250-d.rs"

[[bin]]
name = "arc059-d"
path = "src/bin/arc-d/arc059-d.rs"

[[bin]]
name = "agc063-b"
path = "src/bin/agc-b/agc063-b.rs"

[[bin]]
name = "agc044-b"
path = "src/bin/agc-b/agc044-b.rs"

[[bin]]
name = "agc044-a"
path = "src/bin/agc-a/agc044-a.rs"

[[bin]]
name = "arc081-c"
path = "src/bin/arc-c/arc081-c.rs"

[[bin]]
name = "arc081-d"
path = "src/bin/arc-d/arc081-d.rs"

[[bin]]
name = "abc220-f"
path = "src/bin/abc-f/abc220-f.rs"

[[bin]]
name = "abc273-e"
path = "src/bin/abc-e/abc273-e.rs"

[[bin]]
name = "abc295-e"
path = "src/bin/abc-e/abc295-e.rs"

[[bin]]
name = "abc250-c"
path = "src/bin/abc-c/abc250-c.rs"

[[bin]]
name = "abc085-d"
path = "src/bin/abc-d/abc085-d.rs"

[[bin]]
name = "abc295-f"
path = "src/bin/abc-f/abc295-f.rs"

[[bin]]
name = "abc240-f"
path = "src/bin/abc-f/abc240-f.rs"

[[bin]]
name = "abc012-d"
path = "src/bin/abc-d/abc012-d.rs"

[[bin]]
name = "abc317-g"
path = "src/bin/abc-g/abc317-g.rs"

[[bin]]
name = "abc259-g"
path = "src/bin/abc-g/abc259-g.rs"

[[bin]]
name = "abc137-c"
path = "src/bin/abc-c/abc137-c.rs"

[[bin]]
name = "abc275-f"
path = "src/bin/abc-f/abc275-f.rs"

[[bin]]
name = "abc122-c"
path = "src/bin/abc-c/abc122-c.rs"

[[bin]]
name = "abc244-f"
path = "src/bin/abc-f/abc244-f.rs"

[[bin]]
name = "abc237-f"
path = "src/bin/abc-f/abc237-f.rs"

[[bin]]
name = "abc249-f"
path = "src/bin/abc-f/abc249-f.rs"

[[bin]]
name = "abc161-e"
path = "src/bin/abc-e/abc161-e.rs"

[[bin]]
name = "abc035-d"
path = "src/bin/abc-d/abc035-d.rs"

[[bin]]
name = "abc215-f"
path = "src/bin/abc-f/abc215-f.rs"

[[bin]]
name = "arc106-d"
path = "src/bin/arc-d/arc106-d.rs"

[[bin]]
name = "arc124-c"
path = "src/bin/arc-c/arc124-c.rs"

[[bin]]
name = "arc134-c"
path = "src/bin/arc-c/arc134-c.rs"

[[bin]]
name = "abc162-e"
path = "src/bin/abc-e/abc162-e.rs"

[[bin]]
name = "abc057-d"
path = "src/bin/abc-d/abc057-d.rs"

[[bin]]
name = "abc245-e"
path = "src/bin/abc-e/abc245-e.rs"

[[bin]]
name = "abc231-e"
path = "src/bin/abc-e/abc231-e.rs"

[[bin]]
name = "abc281-f"
path = "src/bin/abc-f/abc281-f.rs"

[[bin]]
name = "abc245-d"
path = "src/bin/abc-d/abc245-d.rs"

[[bin]]
name = "abc223-f"
path = "src/bin/abc-f/abc223-f.rs"

[[bin]]
name = "agc044-c"
path = "src/bin/agc-c/agc044-c.rs"

[[bin]]
name = "abc212-e"
path = "src/bin/abc-e/abc212-e.rs"

[[bin]]
name = "abc210-e"
path = "src/bin/abc-e/abc210-e.rs"

[[bin]]
name = "abc119-c"
path = "src/bin/abc-c/abc119-c.rs"

[[bin]]
name = "abc054-d"
path = "src/bin/abc-d/abc054-d.rs"

[[bin]]
name = "abc247-b"
path = "src/bin/abc-b/abc247-b.rs"

[[bin]]
name = "arc038-b"
path = "src/bin/arc-b/arc038-b.rs"

[[bin]]
name = "arc013-c"
path = "src/bin/arc-c/arc013-c.rs"

[[bin]]
name = "abc248-e"
path = "src/bin/abc-e/abc248-e.rs"

[[bin]]
name = "arc024-b"
path = "src/bin/arc-b/arc024-b.rs"

[[bin]]
name = "abc252-e"
path = "src/bin/abc-e/abc252-e.rs"

[[bin]]
name = "agc024-c"
path = "src/bin/agc-c/agc024-c.rs"

[[bin]]
name = "abc103-d"
path = "src/bin/abc-d/abc103-d.rs"

[[bin]]
name = "abc245-c"
path = "src/bin/abc-c/abc245-c.rs"

[[bin]]
name = "abc091-c"
path = "src/bin/abc-c/abc091-c.rs"

[[bin]]
name = "arc078-c"
path = "src/bin/arc-c/arc078-c.rs"

[[bin]]
name = "arc103-c"
path = "src/bin/arc-c/arc103-c.rs"

[[bin]]
name = "arc072-c"
path = "src/bin/arc-c/arc072-c.rs"

[[bin]]
name = "abc197-f"
path = "src/bin/abc-f/abc197-f.rs"

[[bin]]
name = "abc238-g"
path = "src/bin/abc-g/abc238-g.rs"

[[bin]]
name = "abc252-f"
path = "src/bin/abc-f/abc252-f.rs"

[[bin]]
name = "arc148-c"
path = "src/bin/arc-c/arc148-c.rs"

[[bin]]
name = "arc138-b"
path = "src/bin/arc-b/arc138-b.rs"

[[bin]]
name = "arc138-c"
path = "src/bin/arc-c/arc138-c.rs"

[[bin]]
name = "arc160-c"
path = "src/bin/arc-c/arc160-c.rs"

[[bin]]
name = "arc154-c"
path = "src/bin/arc-c/arc154-c.rs"

[[bin]]
name = "abc241-e"
path = "src/bin/abc-e/abc241-e.rs"

[[bin]]
name = "arc129-c"
path = "src/bin/arc-c/arc129-c.rs"

[[bin]]
name = "arc117-c"
path = "src/bin/arc-c/arc117-c.rs"

[[bin]]
name = "arc128-c"
path = "src/bin/arc-c/arc128-c.rs"

[[bin]]
name = "arc136-d"
path = "src/bin/arc-d/arc136-d.rs"

[[bin]]
name = "arc123-c"
path = "src/bin/arc-c/arc123-c.rs"

[[bin]]
name = "arc130-c"
path = "src/bin/arc-c/arc130-c.rs"

[[bin]]
name = "arc117-d"
path = "src/bin/arc-d/arc117-d.rs"

[[bin]]
name = "abc073-d"
path = "src/bin/abc-d/abc073-d.rs"

[[bin]]
name = "abc133-b"
path = "src/bin/abc-b/abc133-b.rs"

[[bin]]
name = "abc118-d"
path = "src/bin/abc-d/abc118-d.rs"

[[bin]]
name = "abc083-d"
path = "src/bin/abc-d/abc083-d.rs"

[[bin]]
name = "abc190-e"
path = "src/bin/abc-e/abc190-e.rs"

[[bin]]
name = "abc285-f"
path = "src/bin/abc-f/abc285-f.rs"

[[bin]]
name = "abc217-f"
path = "src/bin/abc-f/abc217-f.rs"

[[bin]]
name = "abc150-e"
path = "src/bin/abc-e/abc150-e.rs"

[[bin]]
name = "arc137-a"
path = "src/bin/arc-a/arc137-a.rs"

[[bin]]
name = "abc223-e"
path = "src/bin/abc-e/abc223-e.rs"

[[bin]]
name = "arc077-c"
path = "src/bin/arc-c/arc077-c.rs"

[[bin]]
name = "abc221-e"
path = "src/bin/abc-e/abc221-e.rs"

[[bin]]
name = "abc247-a"
path = "src/bin/abc-a/abc247-a.rs"

[[bin]]
name = "abc253-d"
path = "src/bin/abc-d/abc253-d.rs"

[[bin]]
name = "abc252-d"
path = "src/bin/abc-d/abc252-d.rs"

[[bin]]
name = "abc231-f"
path = "src/bin/abc-f/abc231-f.rs"

[[bin]]
name = "abc185-e"
path = "src/bin/abc-e/abc185-e.rs"

[[bin]]
name = "abc253-c"
path = "src/bin/abc-c/abc253-c.rs"

[[bin]]
name = "abc133-c"
path = "src/bin/abc-c/abc133-c.rs"

[[bin]]
name = "abc248-d"
path = "src/bin/abc-d/abc248-d.rs"

[[bin]]
name = "abc248-c"
path = "src/bin/abc-c/abc248-c.rs"

[[bin]]
name = "abc252-c"
path = "src/bin/abc-c/abc252-c.rs"

[[bin]]
name = "abc241-d"
path = "src/bin/abc-d/abc241-d.rs"

[[bin]]
name = "abc241-c"
path = "src/bin/abc-c/abc241-c.rs"

[[bin]]
name = "abc248-b"
path = "src/bin/abc-b/abc248-b.rs"

[[bin]]
name = "abc129-c"
path = "src/bin/abc-c/abc129-c.rs"

[[bin]]
name = "abc123-c"
path = "src/bin/abc-c/abc123-c.rs"

[[bin]]
name = "abc130-c"
path = "src/bin/abc-c/abc130-c.rs"

[[bin]]
name = "abc145-d"
path = "src/bin/abc-d/abc145-d.rs"

[[bin]]
name = "abc131-d"
path = "src/bin/abc-d/abc131-d.rs"
